Archive2/8b/bc91980b2d0c54/output
main.cpp:1:93: error: stray ‘#’ in program
 ijijijijnuhgh5555555555555555555555555yguguytytr65r7uohiuhuygugrfvhuirfiuhycgxhfhdfghfghfgdh#include <iostream>№#include <iostream>
                                                                                             ^
main.cpp:1:1: error: stray ‘\342’ in program
 ijijijijnuhgh5555555555555555555555555yguguytytr65r7uohiuhuygugrfvhuirfiuhycgxhfhdfghfghfgdh#include <iostream>№#include <iostream>
 ^
main.cpp:1:1: error: stray ‘\204’ in program
main.cpp:1:1: error: stray ‘\226’ in program
main.cpp:1:115: error: stray ‘#’ in program
 ijijijijnuhgh5555555555555555555555555yguguytytr65r7uohiuhuygugrfvhuirfiuhycgxhfhdfghfghfgdh#include <iostream>№#include <iostream>
                                                                                                                   ^
main.cpp:25:2: error: stray ‘#’ in program
 }#include <iostream>
  ^
main.cpp:49:2: error: stray ‘#’ in program
 }#include <iostream>
  ^
main.cpp:1:1: error: ‘ijijijijnuhgh5555555555555555555555555yguguytytr65r7uohiuhuygugrfvhuirfiuhycgxhfhdfghfghfgdh’ does not name a type
 ijijijijnuhgh5555555555555555555555555yguguytytr65r7uohiuhuygugrfvhuirfiuhycgxhfhdfghfghfgdh#include <iostream>№#include <iostream>
 ^
In file included from main.cpp:2:0:
/usr/include/c++/4.8/exception:35:37: error: expected declaration before end of line
 #pragma GCC visibility push(default)
                                     ^
